syntax = "proto3";

package proto;

option go_package = "./proto";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
    string param = 1;
}

message CreateOrderResponse {
    string order_id = 1;
}